--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://rshinkai.github.io/"
 languageCode = "en-us"
 title = "My New Hugo Site"
 theme = "gohugo-theme-ananke"
